syntax = "proto3";
package axiome.vote.v1beta1;

import "gogoproto/gogo.proto";
import "axiome/vote/v1beta1/types.proto";

option go_package = "github.com/axiome-pro/axm-node/x/vote/types";

message EventProposalCreated {
  string name = 1;
  string author = 2;
}

message EventProposalVote {
  string voter = 1;
  bool agreed = 2;
}

message EventvoteFinished {
  string name = 1;
  bool agreed = 2;
}

message EventPollFinished {
  string name = 1 [
    (gogoproto.jsontag) = "name,omitempty",
    (gogoproto.moretags) = "yaml:\"name,omitempty\""
  ];
  uint64 yes = 2 [
    (gogoproto.jsontag) = "yes,omitempty",
    (gogoproto.moretags) = "yaml:\"yes,omitempty\""
  ];
  uint64 no = 3 [
    (gogoproto.jsontag) = "no,omitempty",
    (gogoproto.moretags) = "yaml:\"no,omitempty\""
  ];
  Decision decision = 4 [
    (gogoproto.jsontag) = "decision,omitempty",
    (gogoproto.moretags) = "yaml:\"decision,omitempty\""
  ];
}
